# cmake-lib-template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  options.cmake  pyproject.toml
cmake/: dev-mode.cmake  docs.cmake  install-config.cmake.in  install-rules.cmake  memory.cmake  spell-targets.cmake  static-analyzers.cmake  utility.cmake
core/: CMakeLists.txt
core/cmake/: options.cmake
core/include/my_project/core/: core.hpp
core/src/: core.cpp
core/test/: CMakeLists.txt
example/: CMakeLists.txt
fetch_content_test/: CMakeLists.txt
include/my_project/: my_project.hpp
src/: core.cpp
test/: CMakeLists.txt
test/src/: core_test.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: conan_package_test.cpp  conan_utility_component_test.cpp
utility/: CMakeLists.txt
utility/cmake/: options.cmake
utility/test/: CMakeLists.txt
